<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="135dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/soal_1"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="135dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/soal_2"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="135dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/soal_3"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_2" />
</androidx.constraintlayout.widget.ConstraintLayout>